--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -45,12 +45,12 @@
 			#question_title {
 				text-align: justify;
 				color: #323232;
-				line-height: 22px;
+				line-height: 20px;
+				font-size: 1.6rem;
 			}
+			/*#question_content {
 
-			#question_content {
-				color: #323232;
-			}
+			}*/
 
 			#question_images {
 				/*问题区域的图片*/
@@ -147,7 +147,7 @@
 			}
 
 			.ellipsis-show {
-				/*内容*/
+				/*提问内容*/
 				display: -webkit-box;
 				overflow: hidden;
 				white-space: normal !important;
@@ -155,9 +155,12 @@
 				word-wrap: break-word;
 				-webkit-line-clamp: inherit;
 				-webkit-box-orient: vertical;
+				color: #474747;
+				font-size: 1.5rem;
 			}
 
 			.ellipsis-3 {
+				/*回答内容*/
 				display: -webkit-box;
 				overflow: hidden;
 				white-space: normal !important;
@@ -168,8 +171,9 @@
 			}
 
 			#showAll {
+				/*显示全部，收起按钮*/
 				display: none;
-				color: #D7D7D7;
+				color: #b7b7b7;
 				margin-top: 10px;
 			}
 
