--- a/JiaoBaoYun-hb/html/mine/qun_data_details.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_details.html
@@ -234,8 +234,8 @@
 
 				//---从父页面获取数据---start---
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
-				var data = main.data; //接收页面传入的参数值
-				//var data = {
+				var mainData = main.data; //接收页面传入的参数值
+				//var mainData = {
 				//	gid: gid, //群id
 				//	gname: gname, //群名称
 				//	mstype: mstype, //用户管理角色,0家长,1管理员,2老师,3学生
@@ -244,12 +244,13 @@
 				//	stuimg: stuimg, //资料头像
 				//	type: type, //资料类型
 				//}
-				console.log('从群资料页面获取的数据:' + JSON.stringify(data));
-				role = data.mstype;
+				console.log('从群资料页面获取的数据:' + JSON.stringify(mainData));
+				//role = mainData.mstype;
+				role = 1;
 				if(role == 1) { //管理员才显示保存按钮
 					document.getElementById("finish").style.display = 'inline';
 				}
-				switch(data.type) {
+				switch(mainData.type) {
 					case 'student': //学生
 						mstype = 3;
 						showStu();
@@ -263,7 +264,7 @@
 						showStu();
 						break;
 					default:
-						switch(data.stumstype) {
+						switch(mainData.stumstype) {
 							case 3: //学生
 								mstype = 3;
 								showStu();
@@ -279,7 +280,7 @@
 								showStu();
 								break;
 							default:
-								switch(data.mstype) {
+								switch(mainData.mstype) {
 									case 1: //老师
 										mstype = 2;
 										showTea();
@@ -328,7 +329,7 @@
 						} else if(mstype == 3) {
 							//学生
 							var stuName = stu_name.value;
-							if(stuName != data.stuname) { //判断是否修改了学生姓名
+							if(stuName != mainData.stuname) { //判断是否修改了学生姓名
 								console.log('更改学生姓名:' + stuName);
 								postNum++;
 								changeStuName(stuName); //更改学生姓名
@@ -354,7 +355,7 @@
 						if(this.id == 'tea_expsch') { //教龄的判断
 							console.log('this ' + this.value + '|' + this.value.length);
 							if(this.value.length > 2) { //限制两位数
-								this.value = this.value.slice(0, 2)
+								this.value = this.value.slice(0, 2);
 							}
 							var value = this.value;
 							var temp = '';
@@ -390,7 +391,7 @@
 							}
 						});
 						console.log('parChange ' + parChange);
-						if(stu_name.value == data.stuname && !parChange) {
+						if(stu_name.value == mainData.stuname && !parChange) {
 							//判断是否改变资料
 							document.getElementById("finish").style.color = 'gray';
 							change = false;
@@ -408,8 +409,8 @@
 
 				//展示老师资料
 				function showTea() {
-					tea_name.value = data.stuname; //姓名
-					tea_gname.value = data.gname; //所属群名称
+					//tea_name.value = mainData.stuname; //姓名
+					tea_gname.value = mainData.gname; //所属群名称
 					document.getElementById("tea_show").style.display = 'inline';
 					if(role != 1) {
 						tea_name.setAttribute('disabled', 'disabled'); //老师姓名
@@ -429,8 +430,8 @@
 
 				//展示学生资料
 				function showStu() {
-					stu_name.value = data.stuname; //姓名
-					stu_gname.value = data.gname; //所属群名称
+					//stu_name.value = mainData.stuname; //姓名
+					stu_gname.value = mainData.gname; //所属群名称
 					document.getElementById("stu_show").style.display = 'inline';
 					if(role != 1) {
 						stu_name.setAttribute('disabled', 'disabled'); //学生姓名
@@ -450,14 +451,14 @@
 				 */
 				function getData(type) {
 					var wd = events.showWaiting();
-					console.log('type:' + type + '|stuid:' + data.stuid);
+					console.log('type:' + type + '|stuid:' + mainData.stuid);
 					//22.通过用户资料ID获取用户各项资料
 					//所需参数
 					var comData = {
-						vvl: data.stuid //查询的用户资料ID
+						vvl: mainData.stuid //查询的用户资料ID
 					};
-					var gid = data.gid;
-					console.log('gid ' + gid);
+					var stuid = mainData.stuid;
+					console.log('stuid ' + stuid);
 					postDataPro_PostUuinf(comData, wd, function(data) {
 						console.log('22通过用户资料ID获取用户各项资料postDataPro_PostUuinf:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
@@ -467,6 +468,8 @@
 								//								if(teaData.utid != null) { //账号
 								//									tea_utid.value = teaData.utid;
 								//								}
+								mainData.stuname = teaData.stuname;
+								tea_name.value = mainData.stuname;
 								if(teaData.ugname != null) { //昵称
 									tea_ugname.value = teaData.ugname;
 								}
@@ -493,12 +496,15 @@
 								console.log('学生详细信息:data.RspData.length' + data.RspData.length);
 								mui.each(data.RspData, function(index, item) {
 									//console.log('data.RspData:' + JSON.stringify(item));
-									if(item.utid != null && item.utid != '' && gid == item.gid) {
-										stuData.push(item); //记录获取的学生资料
+									if(item.utid != null && item.utid != '' && stuid == item.stuid) {
+
 										if(item.umstype == 3) {
 											console.log('学生详细信息:' + JSON.stringify(item));
 											//关联的学生账号
+											stuData.push(item); //记录获取的学生资料
 											//stu_utid.value = item.utid;
+											mainData.stuname = item.stuname;
+											stu_name.value = mainData.stuname;
 											stu_ugname.value = item.ugname;
 											utidArray.push({
 												utid: item.utid,
@@ -518,10 +524,34 @@
 								if(utidArray.length != 0) {
 									getUserData(utidArray);
 								}
+
+								if(stuData.length == 0) { //邀请家长但是没有绑定学生
+									mainData.stuname = parData[0].stuname;
+									stu_name.value = mainData.stuname;
+								}
 							}
 						} else {
 							if(data.RspCode != 9) {
 								mui.toast(data.RspTxt);
+							} else {
+								if(type == 2) { //老师
+									tea_name.value = mainData.stuname;
+									teaData = {
+										stuid: mainData.stuid, //资料ID,更新学生老师必填,关系留0
+										stuname: mainData.stuname, //资料名称
+										stuimg: '', //资料头像,学生必填,其他留0
+										job: '', //职位,老师必填,其他留空
+										title: '', //职称,老师必填,其他留空
+										expsch: '', //教龄,老师必填,其他留空
+										sub: '', //科目,老师必填,其他留空
+									}
+									tea_job.setAttribute('disabled', 'disabled'); //老师职位
+									tea_sub.setAttribute('disabled', 'disabled'); //老师科目
+									tea_title.setAttribute('disabled', 'disabled'); //老师职称
+									tea_expsch.setAttribute('disabled', 'disabled'); //老师教龄
+								} else if(type == 3) { //学生
+									stu_name.value = mainData.stuname;
+								}
 							}
 						}
 						wd.close();
@@ -710,17 +740,17 @@
 				 * @param {Object} stuName
 				 */
 				function changeStuName(stuName) {
-					if(data.stuimg == null) {
-						data.stuimg = 'null';
+					if(mainData.stuimg == null) {
+						mainData.stuimg = '';
 					}
 					var wd = events.showWaiting();
 					//23.通过用户资料ID或关联ID更改各类型资料
 					//所需参数
 					var comData = {
 						vtp: 'stu', //更新资料类型,stu:学生,tec:老师,gen:家长关系
-						stuid: data.stuid, //资料ID,更新学生老师必填,关系留0
+						stuid: mainData.stuid, //资料ID,更新学生老师必填,关系留0
 						stuname: stuName, //资料名称
-						stuimg: data.stuimg, //资料头像,学生必填,其他留0
+						stuimg: mainData.stuimg, //资料头像,学生必填,其他留0
 						job: '', //职位,老师必填,其他留空
 						title: '', //职称,老师必填,其他留空
 						expsch: '', //教龄,老师必填,其他留空
@@ -728,8 +758,8 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
-					var gid = data.gid;
-					var stuid = data.stuid;
+					var gid = mainData.gid;
+					var stuid = mainData.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
@@ -745,7 +775,7 @@
 							if(postNum == 0) {
 								mui.back();
 							}
-							data.stuname = stuName;
+							mainData.stuname = stuName;
 						} else {
 							mui.toast('修改学生姓名 ' + stuName + ' 失败: ' + data.RspTxt);
 							document.getElementById("finish").style.color = 'white';
@@ -810,7 +840,7 @@
 					//所需参数
 					var comData = {
 						vtp: 'tec', //更新资料类型,stu:学生,tec:老师,gen:家长关系
-						stuid: data.stuid, //资料ID,更新学生老师必填,关系留0
+						stuid: mainData.stuid, //资料ID,更新学生老师必填,关系留0
 						stuname: tea_name.value, //资料名称
 						stuimg: '0', //资料头像,学生必填,其他留0
 						job: tea_job.value, //职位,老师必填,其他留空
@@ -820,8 +850,8 @@
 						ustuid: '', //关联ID,更新与家长关系必填,其他留空
 						urel: '', //关系,更新与家长关系必填,其他留空
 					};
-					var gid = data.gid;
-					var stuid = data.stuid;
+					var gid = mainData.gid;
+					var stuid = mainData.stuid;
 					postDataPro_PostReStu(comData, wd, function(data) {
 						console.log('90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
 						if(data.RspCode == 0) {
