--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -401,7 +401,7 @@
 			var type = ''; //类型
 			if(data.NoteType == 1) { //点到
 				if(data.MsgContent != '') { //有内容
-					type = data.CheckTypeStr + ' ';
+					type = data.CheckTypeStr + ' : ';
 				} else {
 					type = data.CheckTypeStr;
 				}
