--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -213,7 +213,7 @@
 				var showTop = true; //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
 				var main = plus.webview.currentWebview(); //获取当前窗体对象
 				var subData = null; //接收页面传入的参数值
-				var back = true;//是否允许返回
+				var back = true; //是否允许返回
 				//			var subData = {
 				//				fid: this.getAttribute("data-fid"), //fid，如果是0则显示顶层文件和文件夹
 				//			    showTop:showTop,//是否显示顶部三项
@@ -260,7 +260,7 @@
 
 				//增加文件夹的监听
 				document.getElementById('addfolder').addEventListener('tap', function(e) {
-					back=false;//是否允许返回
+					back = false; //是否允许返回
 					console.log('增加文件夹showPid:' + showPid);
 					e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
 					var btnArray = ['取消', '确定'];
@@ -274,6 +274,8 @@
 							} else if(!reg.test(e.value)) {
 								//特殊字符
 								mui.toast('名字中不能包含这些字符 \ / : * ? " < > | ');
+							} else if(e.value.length > 20) {
+								mui.toast('名字最多20个字');
 							} else {
 								//27.用户云盘文件上传或创建文件夹
 								//所需参数
@@ -304,7 +306,7 @@
 											topFolderData[0].fdata.push(newFolderData);
 										}
 										mui.toast('创建成功');
-										back=true;//是否允许返回
+										back = true; //是否允许返回
 										document.activeElement.blur();
 										mui.closePopups();
 									} else if(data.RspCode == 8) {
@@ -317,16 +319,12 @@
 							return false;
 						} else {
 							//点击取消
-							back=true;//是否允许返回
+							back = true; //是否允许返回
 							document.activeElement.blur();
 						}
 					}, 'div');
 					document.querySelector('.mui-popup-input input').type = 'text';
-					document.querySelector('.mui-popup-input input').addEventListener('input', function() {
-						if(this.value.length > 20) {
-							this.value = this.value.slice(0, 20);
-						}
-					});
+					document.querySelector('.mui-popup-input input').maxLength = 20;
 				});
 
 				//返回按钮监听
@@ -403,15 +401,15 @@
 					}
 				});
 
-				mui('#all').on('tap', 'img', function() {
-					console.log('img');
-				});
+				//				mui('#all').on('tap', 'img', function() {
+				//					console.log('img');
+				//				});
 
 				/**
 				 * 长按文件或文件夹
 				 */
 				mui('#all').on('longtap', '.mui-table-view-cell', function(e) {
-					back=false;//是否允许返回
+					back = false; //是否允许返回
 					var id = this.getAttribute('id'); //元素id
 					var pid = this.getAttribute('data-pid'); //父ID
 					var fid = this.getAttribute('data-fid'); //文件id
@@ -420,7 +418,7 @@
 					console.log('长按文件或文件夹' + id + '|' + fid + "|" + fname + '|' + ftype);
 					e.detail.gesture.preventDefault(); //修复iOS 8.x平台存在的bug，使用plus.nativeUI.prompt会造成输入法闪一下又没了
 					var btnArray = ['取消', '确定'];
-					mui.prompt('', '请输入新的名字', '重命名', btnArray, function(e) {
+					mui.prompt('', '请输入新的名字,最多20个字', '重命名', btnArray, function(e) {
 						if(e.index == 1) { //确定
 							var reg = new RegExp('^[^\\\\\\/:*?\\"<>|]+$'); //特殊字符过滤的正则表达式
 							var vvl1 = e.value;
@@ -431,6 +429,8 @@
 								mui.toast('名字中不能包含这些字符 \ / : * ? " < > | ');
 							} else if(fname == e.value) {
 								mui.toast('操作失败，不能与原名字相同');
+							} else if(vvl1.length > 20) {
+								mui.toast('名字最多20个字');
 							} else {
 								//28.用户修改文件或文件夹名称
 								//所需参数
@@ -459,7 +459,7 @@
 												}
 											});
 										});
-										back=true;//是否允许返回
+										back = true; //是否允许返回
 										document.activeElement.blur();
 										mui.closePopups();
 									} else if(data.RspCode == 8) {
@@ -472,16 +472,13 @@
 							}
 							return false;
 						} else { //取消
-							back=true;//是否允许返回
+							back = true; //是否允许返回
 							document.activeElement.blur();
 						}
 					}, 'div');
+					document.querySelector('.mui-popup-input input').value = fname;
 					document.querySelector('.mui-popup-input input').type = 'text';
-					document.querySelector('.mui-popup-input input').addEventListener('input', function() {
-						if(this.value.length > 20) {
-							this.value = this.value.slice(0, 20);
-						}
-					});
+					document.querySelector('.mui-popup-input input').maxLength = 20;
 				});
 
 				/**
