--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -82,15 +82,7 @@
 
 			.mui-backdrop {
 				/*选择排序的遮罩*/
-				position: fixed;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				z-index: 0;
-				background-color: rgba(0, 0, 0, .3);
-				height: 0px;
-				width: 0px;
+				background-color: rgba(0, 0, 0, .05);
 			}
 
 			.mui-popover .mui-popover-arrow:after {
@@ -223,25 +215,25 @@
 								<div id="ordertype" class="mui-pull-left">按质量排序</div>
 								<span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
 							</a>
-							<div id="popover" class="mui-popover" style="width: 150px;z-index: 999;">
-								<!--<div class="mui-popover-arrow"></div>-->
-								<ul class="mui-table-view" style="color: black;">
-									<li id="ordertype_2" class="mui-table-view-cell" value='2' data-value="按质量排序" style="height: 40px;">
-										按质量排序
-										<span id="ordertype_2_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right"></span>
-									</li>
-									<li id="ordertype_1" class="mui-table-view-cell" value='1' data-value="按时间排序" style="height: 40px;">
-										按时间排序
-										<span id="ordertype_1_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="display: none;"></span>
-									</li>
-								</ul>
-							</div>
 						</div>
 						<div id="answer_bottom">
 						</div>
 					</div>
 				</ul>
 			</div>
+		</div>
+		<div id="popover" class="mui-popover" style="width: 150px;">
+			<!--<div class="mui-popover-arrow"></div>-->
+			<ul class="mui-table-view" style="color: black;">
+				<li id="ordertype_2" class="mui-table-view-cell" value='2' data-value="按质量排序" style="height: 40px;">
+					按质量排序
+					<span id="ordertype_2_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right"></span>
+				</li>
+				<li id="ordertype_1" class="mui-table-view-cell" value='1' data-value="按时间排序" style="height: 40px;">
+					按时间排序
+					<span id="ordertype_1_icon" class="mui-icon mui-icon-checkmarkempty mui-pull-right" style="display: none;"></span>
+				</li>
+			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
