--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -435,7 +435,7 @@
 			var type = ''; //类型
 			if(data.NoteType == 1) { //点到
 				if(data.MsgContent != '') { //有内容
-					type = data.CheckTypeStr + ' ';
+					type = data.CheckTypeStr + ' : ';
 				} else {
 					type = data.CheckTypeStr;
 				}
