--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -388,7 +388,7 @@
 				InfoList.push(personalName);
 				InfoList.push(time);
 				InfoList.push(contentText);
-				InfoList.push(tempModel.IsFocused);
+				InfoList.push(datasource2.IsFocused);
 				if(tempModel.EncImgAddr != '') {
 					var EncImgAddrs = tempModel.EncImgAddr.split('|');
 					var EncAddr = tempModel.EncAddr.split('|');
