--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -42,11 +42,11 @@
 					<label style="font-size: 15px;">原密码</label>
 					<input type="password" id="phoneNumber" placeholder="请输入原密码">
 				</div>
-				<div class="mui-input-row row1">
+				<div class="mui-input-row row1" id="password000">
 					<label style="font-size: 15px;">新密码</label>
 					<input type="password" oninput="if(value.length>20)value=value.slice(0,20)" id="password0" placeholder="输入新密码">
 				</div>
-				<div class="mui-input-row row2">
+				<div class="mui-input-row row2" id="password111">
 					<label style="font-size: 15px;">确认密码</label>
 					<input type="password" oninput="if(value.length>20)value=value.slice(0,20)" id="password1" placeholder="重新输入新密码">
 				</div>
@@ -94,6 +94,8 @@
 				var unickName0 = document.getElementById("unickName0"); //昵称
 				var password0 = document.getElementById("password0"); //新密码
 				var password1 = document.getElementById("password1"); //确认密码
+				var password0div = document.getElementById("password000"); //新密码
+				var password1div = document.getElementById("password111"); //确认密码
 				var modifypasswordBtn = document.getElementById("modifypassword"); //修改密码按钮
 
 				//设置里面修改密码
@@ -110,6 +112,8 @@
 					}else{
 						oldPassword.style.display = 'block';
 					}
+					password0div.style.display = 'block';
+					password1div.style.display = 'block';
 					tempFlag = 1;
 					navTitle.innerHTML = '修改密码';
 					modifypasswordBtn.innerHTML = '修改密码';
@@ -129,6 +133,8 @@
 					//如果有昵称，则不显示
 					if (personal.unick.length>0) {
 						unickName0.style.display = 'none';
+					}else{
+						unickName0.style.display = 'block';
 					}
 					console.log('333333');
 					clearData();
