--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -102,13 +102,13 @@
 				//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
 				//点击title跳转到账号信息界面
 				events.addTap('title', function() {
-//					if(plus.os.name == 'Android') {
-//						setTimeout(function() {
-//							closeMenu();
-//						}, 250);
-//					} else {
+					if(plus.os.name == 'Android') {
+						setTimeout(function() {
+							closeMenu();
+						}, 250);
+					} else {
 						closeMenu();
-//					}
+					}
 					events.openNewWindow('/html/mine/account-info.html')
 				})
 
@@ -117,13 +117,13 @@
 
 					console.log('click position:' + this.getAttribute('position'))
 					console.log("系统名称："+plus.os.name);
-//					if(plus.os.name == 'Android') {
-//						setTimeout(function() {
-//							closeMenu();
-//						}, 250);
-//					} else {
+					if(plus.os.name == 'Android') {
+						setTimeout(function() {
+							closeMenu();
+						}, 250);
+					} else {
 						closeMenu();
-//					}
+					}
 					switch(parseInt(this.getAttribute('position'))) {
 						case 0: //群管理
 							events.openNewWindowWithData('/html/mine/qun_manage_1.html', {
