隐藏群备注，调整笔记界面

--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -26,7 +26,7 @@
 				background: white;
 				position: absolute;
 				width: 96%;
-				height: 40px;
+				/*height: 40px;*/
 				border-radius: 5px;
 				left: 2%;
 			}
@@ -130,10 +130,11 @@
 				<!--数据列表-->
 				<div id="top">
 					<div id="add">
-						<div style="margin-left: 5%;display: inline;">
-							<span class="mui-icon mui-icon-camera" style="color: #A9A9A9;"></span>
+						<span class="mui-icon mui-icon-camera" style="color: #A9A9A9;margin-left: 5%;position: absolute;line-height: 37px;margin-top: 1px;"></span>
+						<div style="color: #007AFF;line-height: 40px;margin-left: 12%;display: inline;font-size: 20px;margin-top: 4px;">
+							丨
 						</div>
-						<div style="margin-left: 2px;color: #A9A9A9;display: inline;border-left:1px solid #007AFF;padding-left: 6px;">
+						<div style="color: #A9A9A9;position: absolute;left: 18%;display: inline;line-height: 40px;margin-top: 1.5px;font-size: 15px;">
 							记录生活，留下美好...
 						</div>
 					</div>
