--- a/JiaoBaoYun-hb/html/mine/qun_manage_info.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info.html
@@ -100,7 +100,7 @@
 					<label>群说明：</label>
 					<input id="gnote" type="text" placeholder="请简单介绍一下本群！" oninput="if(value.length>30)value=value.slice(0,30)">
 				</div>
-				<div class="mui-input-row" data-value='qunremark'>
+				<div class="mui-input-row" data-value='qunremark' style="display: none;">
 					<label>群备注：</label>
 					<input id="qunremark" type="text" oninput="if(value.length>30)value=value.slice(0,30)">
 				</div>
