--- a/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_info_change.html
@@ -95,7 +95,7 @@
 					<label>群说明：</label>
 					<input id="gnote" type="text" class="mui-input-clear" placeholder="请简单介绍一下本群！">
 				</div>
-				<div class="mui-input-row" data-value='qunremark'>
+				<div class="mui-input-row" data-value='qunremark'style="display: none;">
 					<label>群备注：</label>
 					<input id="qunremark" type="text" class="mui-input-clear">
 				</div>
