--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -27,10 +27,14 @@
 		<div id="popover" class="mui-popover">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<a id="zan" class="mui-icon iconfont icon-quxiaozan" href="#"> 点赞</a>
+					<a id="zan" class="" href="#">
+						<p class="pop-p"><span id="pop-zan" class="mui-icon iconfont icon-dianzan1 isLike"></span>点赞</p> 
+					</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a id="check" class="mui-icon iconfont icon-liulan"  href="#">  查看</a>
+					<a id="check" class=""  href="#"> 
+						<p  class="pop-p"><span id="pop-look" class="mui-icon iconfont icon-liulan isNotLike"></span>查看</p> 
+					</a>
 				</li>
 			</ul>
 		</div>
