针对以前的求知，修改

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -15,33 +15,33 @@
             .mui-content {
                 background: white;
             }*/
-
+			
 			.mui-table-view {
 				margin-top: 0px;
 				word-break: break-all;
 			}
-
+			
 			.mui-table-view-cell {
 				background: white;
 			}
-
+			
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-
+			
 			#question.mui-active {
 				/*点击问题区域的效果*/
 				background: white;
 			}
-
+			
 			#question {
 				/*问题区域*/
 				border-bottom: 1px solid #EEEEEE;
 				box-shadow: 0px 0px 5px #E3E3E3;
 			}
-
+			
 			#question_title {
 				text-align: justify;
 				color: #323232;
@@ -51,14 +51,14 @@
 			/*#question_content {
 
 			}*/
-
+			
 			#question_images {
 				/*问题区域的图片*/
 				margin-top: 5px;
 				margin-bottom: 5px;
 				width: 100%;
 			}
-
+			
 			#guanzhu {
 				/*关注按钮*/
 				background: #1DB8F1;
@@ -67,55 +67,55 @@
 				padding-top: 5px;
 				border-radius: 3px;
 			}
-
+			
 			#liulanshu,
 			#guanzhushu {
 				/*浏览数和关注数*/
 				line-height: 30px;
 				color: #b7b7b7;
 			}
-
+			
 			#guanzhushu {
 				/*关注数*/
 				margin-left: 10px;
 			}
-
+			
 			.mui-backdrop {
 				/*选择排序的遮罩*/
 				background-color: rgba(0, 0, 0, .05);
 			}
-
+			
 			.mui-popover .mui-popover-arrow:after {
 				/*popover的三角形箭头*/
 				background-color: white;
 				box-shadow: 0 0 5px rgba(0, 0, 0, .1);
 			}
-
+			
 			#answer_top {
 				background-color: #f2f2f2;
 			}
-
+			
 			#answershu {
 				color: #323232;
 			}
-
+			
 			#answer_bottom .mui-table-view-cell:first-child {
 				/*回答列表第一项*/
 				margin-top: 0px;
 			}
-
+			
 			#answer_bottom .mui-table-view-cell {
 				/*每一项回答列表*/
 				margin-top: 10px;
 			}
-
+			
 			#answer_bottom .mui-table-view-cell img {
 				/*回答者的头像*/
 				height: 42px;
 				width: 42px;
 				border-radius: 50%;
 			}
-
+			
 			#answer_bottom .mui-table-view-cell .mui-ellipsis {
 				/*回答者姓名*/
 				line-height: 42px;
@@ -123,21 +123,21 @@
 				font-weight: bold;
 				color: gray;
 			}
-
+			
 			#answer_bottom .mui-table-view-cell .answer-info {
 				/*回答的赞，评论数，时间信息*/
 				margin-top: 5px;
 				color: #b7b7b7;
 			}
-
+			
 			#ordertype {
 				color: #808080;
 			}
-
+			
 			#popover li {
 				color: #808080;
 			}
-
+			
 			.ellipsis-show {
 				/*提问内容*/
 				display: -webkit-box;
@@ -145,12 +145,14 @@
 				white-space: normal !important;
 				text-overflow: ellipsis;
 				word-wrap: break-word;
-				-webkit-line-clamp: inherit;
+				/*-webkit-line-clamp: inherit;*/
 				-webkit-box-orient: vertical;
 				color: #474747;
 				font-size: 1.5rem;
+				/*line-height: 20px;
+				height: 60px;*/
 			}
-
+			
 			.ellipsis-3 {
 				/*回答内容*/
 				display: -webkit-box;
@@ -161,23 +163,27 @@
 				-webkit-line-clamp: 3;
 				-webkit-box-orient: vertical;
 			}
-
+			
 			#showAll {
 				/*显示全部，收起按钮*/
 				display: none;
 				color: #b7b7b7;
 				margin-top: 10px;
 			}
-
+			
 			.record-imge {
 				width: 100%;
 			}
-
+			
 			.record-picture {
 				overflow: hidden;
 				position: relative;
 				float: left;
 				text-align: center;
+			}
+			
+			h1:last-of-type {
+				color: initial;
 			}
 		</style>
 	</head>
