--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -35,7 +35,7 @@
 							<a class="mui-icon iconfont icon-tuku"></a>
 						</div>
 						<div class="mui-input-row mui-checkbox mui-left file-extras" style="float: right;width: 100px;margin-top: -40px;margin-left: -100px;">
-							<label>匿名</label>
+							<label style="font-size: 12px;">匿名</label>
 							<input id="checkbox" name="checkbox" value="" type="checkbox">
 						</div>
 					</div>
