0005261: 作业评论页面修改

--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -31,6 +31,7 @@
 							<p id='submit-time'></p>
 						</div>
 					</div>
+					<div class="the-line"></div>
 					<div id="homework-info" class="homework-info"></div>
 				</div>
 				<!--<div class="result-container">
