0005247: 建议点击我中的积分功能提示 “积分功能暂未开发”

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -153,7 +153,7 @@
 							break;
 							//积分
 						case 5:
-							mui.toast('施工中,请稍候...');
+							mui.toast('积分功能暂未开放！');
 							break;
 							//设置
 						case 6:
