--- a/JiaoBaoYun-hb/html/quan/pub-leave.html
+++ b/JiaoBaoYun-hb/html/quan/pub-leave.html
@@ -14,11 +14,22 @@
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<style type="text/css">
-			.input-content{
-	position: absolute;
-	top: 45px;
+.input-content {
 	width: 100%;
-	height: 25rem;
+	height: 20rem;
+	background-color: white;
+	border-color: #E4E4E4;
+}
+
+
+/**
+ * 输入内容样式
+ */
+textarea {
+	border-radius: 5px 5px 0 0;
+	border-color: transparent;
+	width: 100%;
+	height: 20rem;
 }
 		</style>
 
@@ -31,8 +42,8 @@
 			<a id="publish" class="mui-pull-right mui-plus-visible">发表</a>
 		</header>
 		<div class="mui-content">
-				<div class="input-content">
-				<textarea id='content' class="mui-input-clear question" placeholder="留言..." style="height: 200px;"></textarea>
+			<div class="input-content">
+				<textarea id='content' placeholder="留言..." ></textarea>
 			</div>
 		</div>
 	</body>
