班级空间点赞样式

--- a/JiaoBaoYun-hb/html/quan/classSpace-sub.html
+++ b/JiaoBaoYun-hb/html/quan/classSpace-sub.html
@@ -31,6 +31,7 @@
 						<p class="pop-p"><span id="pop-zan" class="mui-icon iconfont icon-dianzan1 isLike"></span>点赞</p> 
 					</a>
 				</li>
+				<div class="divider-line"></div>
 				<li class="mui-table-view-cell">
 					<a id="check" class=""  href="#"> 
 						<p  class="pop-p"><span id="pop-look" class="mui-icon iconfont icon-liulan isNotLike"></span>查看</p> 
