--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-expertAllComment.html
@@ -10,6 +10,13 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/qiuzhi/qiuzhi-expertAllComment.css" rel="stylesheet" />
 		<style>
+			.mui-table-view{
+				background: #F2F3F5;
+			}
+			.mui-table-view-cell{
+				background: white;
+				margin-bottom: 5px;
+			}
 			.mui-table-view-cell p:last-child,
 			p:first-child {
 				-webkit-line-clamp: 3;
@@ -26,6 +33,8 @@
 			}
 			
 			.mui-table-view-cell div {
+				padding-bottom: 10px;
+				padding-top: 5px;
 				width: 100%;
 			}
 		</style>
