--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSub.html
@@ -13,52 +13,50 @@
 		<style>
 			/*body,
             .mui-content {
-                background: white;
+                background: #E4E4E4;
             }*/
-			
+
 			.mui-table-view {
 				margin-top: 0px;
 				word-break: break-all;
 			}
-			
+
 			.mui-table-view-cell {
 				background: white;
 			}
-			
+
 			.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 			}
-			
+
 			#question.mui-active {
 				/*点击问题区域的效果*/
 				background: white;
 			}
-			
+
 			#question {
 				/*问题区域*/
 				border-bottom: 1px solid #EEEEEE;
 				box-shadow: 0px 0px 5px #E3E3E3;
 			}
-			
+
 			#question_title {
 				text-align: justify;
 				color: #323232;
 				line-height: 20px;
 				font-size: 1.6rem;
+				letter-spacing: 1px;
 			}
-			/*#question_content {
 
-			}*/
-			
 			#question_images {
 				/*问题区域的图片*/
 				margin-top: 5px;
 				margin-bottom: 5px;
 				width: 100%;
 			}
-			
+
 			#guanzhu {
 				/*关注按钮*/
 				background: #1DB8F1;
@@ -67,77 +65,78 @@
 				padding-top: 5px;
 				border-radius: 3px;
 			}
-			
+
 			#liulanshu,
 			#guanzhushu {
 				/*浏览数和关注数*/
 				line-height: 30px;
 				color: #b7b7b7;
 			}
-			
+
 			#guanzhushu {
 				/*关注数*/
 				margin-left: 10px;
 			}
-			
+
 			.mui-backdrop {
 				/*选择排序的遮罩*/
 				background-color: rgba(0, 0, 0, .05);
 			}
-			
+
 			.mui-popover .mui-popover-arrow:after {
 				/*popover的三角形箭头*/
 				background-color: white;
 				box-shadow: 0 0 5px rgba(0, 0, 0, .1);
 			}
-			
+
 			#answer_top {
 				background-color: #f2f2f2;
 			}
-			
+
 			#answershu {
 				color: #323232;
 			}
-			
+
 			#answer_bottom .mui-table-view-cell:first-child {
 				/*回答列表第一项*/
 				margin-top: 0px;
 			}
-			
+
 			#answer_bottom .mui-table-view-cell {
 				/*每一项回答列表*/
-				margin-top: 10px;
+				margin-top: 5px;
+				border-bottom: 1px solid #E4E4E4;
 			}
-			
+
 			#answer_bottom .mui-table-view-cell img {
 				/*回答者的头像*/
-				height: 42px;
-				width: 42px;
+				height: 40px;
+				width: 40px;
 				border-radius: 50%;
 			}
-			
+
 			#answer_bottom .mui-table-view-cell .mui-ellipsis {
 				/*回答者姓名*/
-				line-height: 42px;
-				font-size: 16px;
+				line-height: 40px;
+				font-size: 15px;
 				font-weight: bold;
 				color: gray;
 			}
-			
+
 			#answer_bottom .mui-table-view-cell .answer-info {
 				/*回答的赞，评论数，时间信息*/
 				margin-top: 5px;
 				color: #b7b7b7;
 			}
-			
+
 			#ordertype {
 				color: #808080;
 			}
-			
+
 			#popover li {
 				color: #808080;
 			}
-			
+
 			.ellipsis-show {
 				/*提问内容*/
 				display: -webkit-box;
@@ -152,7 +151,7 @@
 				/*line-height: 20px;
 				height: 60px;*/
 			}
-			
+
 			.ellipsis-3 {
 				/*回答内容*/
 				display: -webkit-box;
@@ -162,37 +161,68 @@
 				word-wrap: break-word;
 				-webkit-line-clamp: 3;
 				-webkit-box-orient: vertical;
+				margin-top: 10px;
 			}
-			
+
 			#showAll {
 				/*显示全部，收起按钮*/
 				display: none;
 				color: #b7b7b7;
 				margin-top: 10px;
 			}
-			
+
 			.record-imge {
 				width: 100%;
 			}
-			
+
 			.record-picture {
 				overflow: hidden;
 				position: relative;
 				float: left;
 				text-align: center;
 			}
-			
+
 			h1:last-of-type {
 				color: initial;
+			}
+
+			.icon-xie {
+				color: gray;
+				line-height: 34px;
+				padding: 0px !important;
+				margin-left: 10px;
+				margin-right: 10px;
+			}
+
+			#tab_div {
+				line-height: 34px;
+				border: 1px solid #E4E4E4;
+				margin-left: 10px;
+				margin-right: 10px;
+				color: gray;
+				border-radius: 3px;
+			}
+
+			.mui-bar {
+				background: white;
+				box-shadow: 0px -1px 1px rgba(228, 228, 228, 0.7);
+				padding-top: 6px;
+			}
+
+			#tab_font {
+				color: #b7b7b7;
+			}
+
+			.mui-pull {
+				font-weight: normal;
 			}
 		</style>
 	</head>
 
 	<body>
-		<nav class="mui-bar mui-bar-tab" style="background: white;box-shadow: 0px -1px 0px 0px rgba(228,228,228,0.35);padding-top: 6px;">
-			<span class="mui-icon iconfont icon-xie mui-pull-left" style="color: gray;line-height: 34px;padding: 0px;margin-left: 10px;margin-right: 10px;"></span>
-			<div id="tab_div" style="line-height: 34px;border: 1px solid #D9D9D9;margin-left: 50px;margin-right: 10px;padding-left: 25px;color: gray;border-radius: 3px;">
-				<font id="tab_font" style="color: #b7b7b7;">请输入问题的答案</font>
+		<nav class="mui-bar mui-bar-tab">
+			<div id="tab_div">
+				<font id="tab_font"><span class="mui-icon iconfont icon-xie mui-pull-left"></span>请输入问题的答案</font>
 			</div>
 		</nav>
 		<!--下拉刷新容器-->
@@ -215,9 +245,9 @@
 						</div>
 					</li>
 					<div id="answer" style="background-color:#efeff4;">
-						<div id="answer_top" style="height: 45px;color: #9D9D9D;">
-							<div id="answershu" class="mui-pull-left" style="line-height: 45px;margin-left: 15px;"></div>
-							<a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 45px;margin-right: 15px;">
+						<div id="answer_top" style="height: 40px;color: #9D9D9D;">
+							<div id="answershu" class="mui-pull-left" style="line-height: 40px;margin-left: 15px;"></div>
+							<a href="#popover" class="mui-pull-right" style="color: #9D9D9D;line-height: 40px;margin-right: 15px;">
 								<div id="ordertype" class="mui-pull-left">按质量排序</div>
 								<span class="mui-icon mui-icon-arrowdown" style="font-size: 16px;margin-left: 3px;"></span>
 							</a>
